--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,7 +1,16 @@
-<HTML>
-<BODY bgcolor=pink>
-  <h1>Hello People, welcome to Buleltclub <h1><br>
-  <a href="login.html">Login</a><br>
-  <a href="register.html">Register</a><br>
-</BODY>
-</HTML>
+<html>
+
+<head>
+<title>My Website</title>
+</head>
+
+<body>
+<h1>Welcome!</h1>
+<a href="https://www.mywebsite.me/ipage2">Next Page</a>
+<img src="https://www.mywebsite.me/images/me.jpg">
+<p>This is my website. I hope you like it here!</p>
+<p><b>Here is some bold text for emphasis.</b></p>
+<p><i>Italics can be creepy.</i></p>
+
+</body>
+</html>
