--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -6,8 +6,8 @@
 
 <body>
 <h1>Welcome!</h1>
-<a href="https://www.mywebsite.me/ipage2">Next Page</a>
-<img src="https://www.mywebsite.me/images/me.jpg">
+<a href="https://www.office.com">Next Page</a>
+<img src="https://workspace.google.com/intl/en/features/?utm_source=docsforwork&utm_medium=et&">
 <p>This is my website. I hope you like it here!</p>
 <p><b>Here is some bold text for emphasis.</b></p>
 <p><i>Italics can be creepy.</i></p>
