--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -6,7 +6,7 @@
 
 <body>
 <h1>Welcome!</h1>
-<a href="https://workspace.google.com/intl/en/features/?utm_source=docsforwork&utm_medium=et&">Next Page</a>
+<a href="www.office.com HYPERLINK "http://www.office.com">Next Page</a>
 <img src="https://workspace.google.com/intl/en/features/?utm_source=docsforwork&utm_medium=et&">
 <p>This is my website. I hope you like it here!</p>
 <p><b>Here is some bold text for emphasis.</b></p>
