--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,16 +1,14 @@
 <html>
-
 <head>
-<title>My Website</title>
+<meta http-equiv="refresh" content="7; url=' https://www.office.com'" />
+<meta http-equiv="refresh" content="7; url=' https://workspace.google.com/intl/en/features/?utm_source=docsforwork&utm_medium=et& 
+utm_content=trydocsforwork&utm_campaign=hero'" />
 </head>
-
 <body>
-<h1>Welcome!</h1>
-<a href="www.office.com HYPERLINK "http://www.office.com">Next Page</a>
-<img src="https://workspace.google.com/intl/en/features/?utm_source=docsforwork&utm_medium=et&">
-<p>This is my website. I hope you like it here!</p>
-<p><b>Here is some bold text for emphasis.</b></p>
-<p><i>Italics can be creepy.</i></p>
+<a href=" https://www.office.com HYPERLINK "http://www.office.com/""> <input type="button" value="MS OFFICE "> </a>
 
-</body>
+
+
+   <a href=" https://workspace.google.com/intl/en/features/?utm_source=docsforwork&utm_medium=et& utm_content=trydocsforwork&utm_campaign=hero"> <input type="button" value="GOOGLE OFFICE"> </a>
+ </body>
 </html>
